<resources>
    <string name="app_name">TeachBase</string>
    <string name="bad_network_message">Serverga bog\'lanish amalga oshmadi. Tarmoqqa ulanganligingizni tekshirib ko\'ring.</string>
    <string name="onother_error">\"Kutilmagan xatolik : \"\n</string>
    <string name="login_or_password_incorrect">Login yoki parol noto\'g\'ri kiritildi</string>
    <string name="connection_error">Tarmoqqa ulanish mavjud emas</string>
    <string name="profile">Profil</string>
    <string name="settings">Sozlamalar</string>
    <string name="theme">Mavzular</string>
    <string name="languages">Tillar</string>
    <string name="logout">Chiqish</string>
    <string name="logout_title">Tizimdan chiqish</string>
    <string name="logout_message">Siz rostan ham tizimdan chiqmoqchimisiz?</string>
    <string name="cancel">Bekor qilish</string>
    <string name="proccessing">Ishlab chiqishda</string>

    <string-array name="status_names">
        <item>Yangi</item>
        <item>Ishlaydi</item>
        <item>Yaroqsiz</item>
    </string-array>
</resources>