<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:showIn="navigation_view">    <item        android:id="@+id/nav_profile"        android:icon="@drawable/ic_person"        android:title="@string/profile" />    <item        android:id="@+id/nav_settings"        android:icon="@drawable/settings"        android:title="@string/settings" />    <item        android:id="@+id/nav_theme"        android:icon="@drawable/ic_theme"        android:title="@string/theme" />    <item        android:id="@+id/nav_language"        android:icon="@drawable/ic_language"        android:title="@string/languages" />    <item        android:id="@+id/nav_logout"        android:icon="@drawable/logout"        android:title="@string/logout" /></menu>