<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logout_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/default_margin"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/logout_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubrik"
            android:text="@string/logout_title"
            android:textColor="@color/black"
            android:textSize="@dimen/very_large_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_text_color"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubrik"
            android:text="@string/logout_message"
            android:textSize="@dimen/standard_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/logout_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rubrik"
                android:padding="8dp"
                android:text="@string/logout"
                android:textColor="@color/cl_color_primary"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/cancel_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rubrik"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@color/cl_color_primary"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>